--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,9 +1,15 @@
+<!-- link_to helper-->
 <h1>Articles</h1>
+
+Our blog has <%= Article.public_count %>
 
 <ul>
   <% @articles.each do |article| %>
+  <% unless article.archived? %>
     <li>
-      <%= article.title %>
+      <%= link_to article.title, article %>
     </li>
   <% end %>
+  <% end %>
 </ul>
+<%= link_to "New Article", new_article_path %>
