Add basic security on Articles controller

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,7 +1,7 @@
 <!-- link_to helper-->
 <h1>Articles</h1>
 
-Our blog has <%= Article.public_count %>
+Our blog has <%= Article.public_count %> articles and counting!
 
 <ul>
   <% @articles.each do |article| %>
