--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,15 +1,22 @@
-<!-- link_to helper-->
-<h1>Articles</h1>
+<h1> Articles </h1>
 
-Our blog has <%= Article.public_count %> articles and counting!
+<p class="lead">
+  Our blog has <%= Article.public_count %> articles and counting!
+</p>
 
-<ul>
+<div class="list-group my-3" > 
   <% @articles.each do |article| %>
-  <% unless article.archived? %>
-    <li>
-      <%= link_to article.title, article %>
-    </li>
+    <% unless article.archived? %>
+      <a href= <%= article_path(article) %> 
+         style="text-decoration: none !important" 
+         class="list-group-item list-group-item-action">
+          <%=article.title%>
+      </a>
+    <% end %>
   <% end %>
-  <% end %>
-</ul>
-<%= link_to "New Article", new_article_path %>
+</div>
+
+<a style="text-decoration: none !important"
+   class="btn btn-primary" href= <%= new_article_path %>>  
+    New Article
+</a>
