--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,18 +1,16 @@
 <% unless comment.archived? %>
-  <p>
-    <strong>Commenter:</strong>
-    <%= comment.commenter %>
-  </p>
-
-  <p>
-    <strong>Comment:</strong>
+<div class="card my-2" >
+  <p class="my-2 pe-3">
+    <strong><%= comment.commenter %> : </strong>
+    <br/>
     <%= comment.body %>
-  </p>
+  </p> 
 
   <p>
-    <%= link_to "Destroy Comment", [comment.article, comment], data: {
+    <%= link_to "Delete comment", [comment.article, comment], data: {
                   turbo_method: :delete,
                   turbo_confirm: "Are you sure?"
                 } %>
   </p>
+</div>
 <% end %>
