--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,20 +1,24 @@
+
 <%= form_with model: [ @article, @article.comments.build ] do |form| %>
-  <p>
-    <%= form.label :commenter %><br>
-    <%= form.text_field :commenter %>
-  </p>
-  <p>
-    <%= form.label :body %><br>
-    <%= form.text_area :body %>
+
+  <p class="mb-3">
+    <%= form.label :commenter, class: "form-label" %><br>
+    <%= form.text_field :commenter, class:"form-control" %>
   </p>
 
-  <p>
+  <p class="mb-3">
+    <%= form.label :body, class: "form-label" %>
+    <br>
+    <%= form.text_area :body,  class:"form-control" %>
+  </p>
+
+  <p class="mb-3">
     <%= form.label :status %><br>
-    <%= form.select :status, ['public', 'private', 'archived'], selected: 'public' %>
+    <%= form.select :status, ['public', 'private', 'archived'], selected: 'public', class:"form-select" %>
   </p>
 
-
   <p>
-    <%= form.submit %>
+    <%= form.submit :Submit, class:"btn btn-success" %>
+    <%= link_to "Back", :back, class: :btn, class: "btn btn-primary"%>
   </p>
 <% end %>
