Apply bootstrap to Article Form

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,26 +1,27 @@
 <%= form_with model: article do |form| %>
-  <div>
-    <%= form.label :title %><br>
-    <%= form.text_field :title %>
+  <div class="my-3">
+    <%= form.label :title, class: "form-label" %><br>
+    <%= form.text_field :title, class: "form-control" %>
     <% article.errors.full_messages_for(:title).each do |message| %>
-      <div><%= message %></div>
+      <p><%= message %></p>
     <% end %>
   </div>
 
-  <div>
-    <%= form.label :body %><br>
-    <%= form.text_area :body %><br>
+  <div class="my-3">
+    <%= form.label :body, class: "form-label" %><br>
+    <%= form.text_area :body, class: "form-control" %><br>
     <% article.errors.full_messages_for(:body).each do |message| %>
-      <div><%= message %></div>
+      <p><%= message %></p>
     <% end %>
   </div>
 
-  <div>
-    <%= form.label :status %><br>
-    <%= form.select :status, ['public', 'private', 'archived'], selected: 'public' %>
+  <div class="my-3">
+    <%= form.label :status, class: "form-label" %>
+    <%= form.select :status, ['public', 'private', 'archived'], selected: 'public', class:"form-select form-select-lg mb-3" %>
   </div>
 
-  <div>
-    <%= form.submit %>
+  <div class="my-3">
+    <%= form.submit :Submit, class:"btn btn-success" %>
+    <%= link_to "Back", :back, class: :btn, class: "btn btn-primary"%>
   </div>
 <% end %>
