--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -3,7 +3,7 @@
     <h3 class="card-title"><%= @article.title %></h3>
     
     <p class="card-text">
-      Some quick example text to build on the card title and make up the bulk of the card's content.
+      <%= @article.body %>
     </p>
     
       <%= link_to "Edit", edit_article_path(@article), class:"card-link" %>
