--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -19,6 +19,6 @@
 
   <p>
     <%= form.submit :Submit, class:"btn btn-success" %>
-    <%= link_to "Back", :back, class: :btn, class: "btn btn-primary"%>
+    <%= link_to "Back", root_path, class: :btn, class: "btn btn-primary"%>
   </p>
 <% end %>
