--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -5,15 +5,18 @@
     <p class="card-text">
       <%= @article.body %>
     </p>
-
+    <% if user_signed_in? %>
+    <p>
       <%= link_to "Edit", edit_article_path(@article), class:"card-link" %>
-
       <%= link_to "Destroy", article_path(@article), data: {
                       turbo_method: :delete,
                       turbo_confirm: "Are you sure?"
-                    }%>
-
-    <h5 class="card-subtitle mb-2 text-muted mt-4">Comments</h5>
+                    }, class:"card-link"%>
+    </p>
+    <% end %>
+    <h5 class="card-subtitle mb-2 text-muted mt-4">
+      Comments: <%= @article.comments.count%>
+    </h5>
     <div>
       <%= render @article.comments %>
     </div>
