--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,22 +1,24 @@
 <h1> Articles </h1>
 
+<% if user_signed_in? %>
+  <a style="text-decoration: none !important"
+    class="btn btn-primary" href= <%= new_article_path %>>
+      Add a new Article
+  </a>
+<% end %>
+
 <p class="lead">
-  Our blog has <%= Article.public_count %> articles and counting!
+  This blog has <%= Article.public_count %> articles and counting!
 </p>
 
-<div class="list-group my-3" > 
+<div class="list-group my-3" >
   <% @articles.each do |article| %>
     <% unless article.archived? %>
-      <a href= <%= article_path(article) %> 
-         style="text-decoration: none !important" 
+      <a href= <%= article_path(article) %>
+         style="text-decoration: none !important"
          class="list-group-item list-group-item-action">
           <%=article.title%>
       </a>
     <% end %>
   <% end %>
 </div>
-
-<a style="text-decoration: none !important"
-   class="btn btn-primary" href= <%= new_article_path %>>  
-    New Article
-</a>
