--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,19 +1,24 @@
 <div class="card" style="width: 30rem;">
   <div class="card-body">
     <h3 class="card-title"><%= @article.title %></h3>
-    
+    <h5 class="card-subtitle mb-2 text-muted mt-4">
+      <strong>Author: </strong> <%= @article.user.email%>
+    </h5>
     <p class="card-text">
-      Some quick example text to build on the card title and make up the bulk of the card's content.
+      <%= @article.body %>
     </p>
-    
+    <% if user_signed_in? && @article.user == current_user %>
+    <p>
       <%= link_to "Edit", edit_article_path(@article), class:"card-link" %>
-      
       <%= link_to "Destroy", article_path(@article), data: {
                       turbo_method: :delete,
                       turbo_confirm: "Are you sure?"
-                    }%>
-      
-    <h5 class="card-subtitle mb-2 text-muted mt-4">Comments</h5>
+                    }, class:"card-link"%>
+    </p>
+    <% end %>
+    <h5 class="card-subtitle mb-2 text-muted mt-4">
+      Comments: <%= @article.comments.count%>
+    </h5>
     <div>
       <%= render @article.comments %>
     </div>
@@ -25,5 +30,3 @@
   <h3>Add a comment:</h3>
   <%= render 'comments/form' %>
 </div>
-
-
